[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket_triage"
version = "1.0.0"
description = "Ticket triage environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic"
]

[project.scripts]
server = "server.app:main"
